<resources>
    <string name="app_name">Hunter X</string>
    <string name="prifixhost">Host: </string>
    <string name="prifixproxy">Proxy: </string>
    <string name="prifixfile">Filename: </string>
    <string name="host">Host  eg: fr1.test3.net</string>
    <string name="proxy">Proxy:Port eg: 1.2.3.4:80</string>
    <string name="proxyfile">Select the proxy file name</string>
    <string name="proxyfilemode">Proxyfile Mode</string>
    <string name="useproxy">Manual Proxy</string>
    <string name="clear">Clear Log</string>
    <string name="log">Log</string>
    <string name="about">About</string>
    <string name="getok">Get Ok Results</string>
    <string name="clearok">Clear Ok Results</string>
    <string name="fileformat">File must be in .txt format</string>
    <string name="thankyou">Thanks To\n\t\tThe Almighty Lord\n\t\tLonewolf\n\t\tReversalX and All Admins\n\t\tAll Play All and All Admins</string>
    <string name="features">Features\n\t\tCheck Site Availability\n\t\tCheck Site Availability Through Proxy\n\t\tAuto Generate Proxy\n\t\tProxy Scrapping</string>
    <string name="madeby">Made with love by Mr. Incredible</string>
</resources>