<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10px"
    tools:context=".About">

    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:id="@+id/cvTitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@color/blue"
            android:textSize="30sp"
            android:textStyle="italic|bold" />

    </RelativeLayout>
    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/aboutapp"
        android:layout_below="@id/cvTitleBar"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginTop="10dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thankyou"
            android:textColor="@color/blue"
            android:textSize="25sp"
            android:textStyle="italic" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/features"
            android:textColor="@color/blue"
            android:layout_marginTop="40dp"
            android:textSize="20sp"
            android:textStyle="italic" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/madeby"
            android:textColor="@color/blue"
            android:layout_marginTop="40dp"
            android:textSize="25sp"
            android:textStyle="italic" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@id/aboutapp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/logobackground"
        android:src="@drawable/logo" />

</RelativeLayout>