<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.mrincredible.hunterx.LogActivity">

    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:id="@+id/cvTitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/app_name"
                android:textStyle="italic|bold"
                android:textSize="30sp"
                android:textColor="@color/blue"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btMinimize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_clear"
                android:text="@string/clear"
                android:backgroundTint="@color/blue"
                android:textColor="@color/white"
                app:iconTint="@color/white"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp"
                android:onClick="clear"/>

        </RelativeLayout>


    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/cvTitleBar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tvlogResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:onClick="copy"
            android:textIsSelectable="true"
            tools:ignore="SpeakableTextPresentCheck" />
    </ScrollView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btGetResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getok"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            app:iconTint="@color/white"
            android:layout_alignParentLeft="true"
            android:onClick="okresult"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btClearResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clearok"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            app:iconTint="@color/white"
            android:layout_toEndOf="@id/btGetResult"
            android:layout_marginStart="5dp"
            android:onClick="okresult"/>

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabdisconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/orange"
        app:srcCompat="@drawable/ic_disconnect"
        tools:ignore="SpeakableTextPresentCheck"
        android:onClick="stop"/>
</RelativeLayout>